<?xml version="1.0"?>
<package>
  <name>lasertracking</name>
  <version>1.0.1</version>
  <description>The lasertracking package</description>


  <maintainer email="david.serret.mayer@gmail.com">da</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  	<build_depend>roscpp</build_depend>
  	<build_depend>rospy</build_depend>
  	<build_depend>sensor_msgs</build_depend>
  	<build_depend>std_msgs</build_depend>
  	<build_depend>tf</build_depend>
  	<build_depend>dynamic_reconfigure</build_depend>
  	<build_depend>interactive_markers</build_depend>


  	<run_depend>geometry_msgs</run_depend>
  	<run_depend>roscpp</run_depend>
  	<run_depend>rospy</run_depend>
  	<run_depend>sensor_msgs</run_depend>
  	<run_depend>std_msgs</run_depend>
  	<run_depend>tf</run_depend>
  	<run_depend>dynamic_reconfigure</run_depend>
  	<run_depend>interactive_markers</run_depend>



  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
